removendo profile de prod

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,2 @@
 server.port=9999
-spring.data.mongodb.uri=${MONGODB_URI}
+spring.data.mongodb.uri=mongodb+srv://sys:r2NfczqP8TFzAhSs@clusterdev.atpqg.mongodb.net/myFirstDatabase?retryWrites=true&w=majority
